chenges buy nowwww

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                      <span></span>
                      <span></span>
                  </div> 
-                 <a href="#">Buy Now</a>  
+                 <a href="#">Buy Nowwwww</a>  
              </div>
              
          </div>
